# oegor_column_generation_2024

./: .gitignore  README.md  SetupGuide.md  SetupGuide.txt  cplex.nix  flake.nix
projects/cg_binpacking/: CMakeLists.txt  FindCPLEX.cmake  README.md  _launch.vs.json.back  bp_instance.cpp  bp_instance.h  bp_pricing_mip.cpp  bp_pricing_mip.h  bp_rmp.cpp  bp_rmp.h  main.cpp  stopwatch.h  utils.cpp  utils.hpp
projects/cg_testproject/: CMakeLists.txt  FindCPLEX.cmake  main.cpp  test_lp.cpp  test_lp.h
scripts/: vars.sh
